syntax = "proto3";

package importer;

import "google/protobuf/timestamp.proto";

service Importer {
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc Scan(ScanRequest) returns (stream ScanResponse);
  rpc OpenReader(OpenReaderRequest) returns (stream OpenReaderResponse);
  rpc CloseReader(CloseReaderRequest) returns (CloseReaderResponse);
  rpc Close(CloseRequest) returns (CloseResponse);
}

message InfoRequest {
}

message InfoResponse {
  string type = 1;
  string origin = 2;
  string root = 3;
}

message ScanRequest {
}

message ScanResponse {
  string pathname = 1;
  oneof result {
    ScanError error = 3;
    ScanRecord record = 2;
  }
}

message ScanError {
  string message = 1;
}

message ScanRecord {
  string target = 1;
  ScanRecordFileInfo fileinfo = 2;
  uint32 file_attributes = 3;
  optional ExtendedAttribute xattr = 4;
}

message EOFResponse {
}

enum ExtendedAttributeType {
  EXTENDED_ATTRIBUTE_TYPE_UNSPECIFIED = 0;
  EXTENDED_ATTRIBUTE_TYPE_EXTENDED = 1;
  EXTENDED_ATTRIBUTE_TYPE_ADS = 2;
}

message ExtendedAttribute {
  string name = 1;
  ExtendedAttributeType type = 2;
}

message ScanRecordFileInfo {
  string name = 1;
  int64 size = 2;
  uint32 mode = 3;
  google.protobuf.Timestamp mod_time = 4;
  uint64 dev = 5;
  uint64 ino = 6;
  uint64 uid = 7;
  uint64 gid = 8;
  uint32 nlink = 9;
  string username = 10;
  string groupname = 11;
  uint32 flags = 12;
}

message ScanResponseError {
  string name = 1;
  int64 size = 3;
}


message OpenReaderRequest {
  string pathname = 1;
}

message OpenReaderResponse {
  bytes chunk = 1;
}

message CloseReaderRequest {
  string pathname = 1;
}

message CloseReaderResponse {
}

message CloseRequest {
}

message CloseResponse {
}